# urban-tree-geometry

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  README.pt-BR.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  tests.yml
data/parameters/: crown_parameters.csv  palm_rule.csv  species_parameters.csv
data/processed/: dialux_tree_parameters.csv
data/raw/: sample_tree_inventory.csv
docs/: about.en.md  about.md  assumptions.md  contact.en.md  contact.md  data_dictionary.md  demo.en.md  demo.md  dialux-parameters.en.md  dialux-parameters.md  dialux_workflow.md  dual_implementation.md  how-it-works.en.md  how-it-works.md  index.en.md  index.md  limitations-page.en.md  limitations-page.md  limitations.md  methodology-page.en.md  methodology-page.md  methodology.md  problem.en.md  problem.md  references-page.en.md  references-page.md  references.md  validation_report.md
docs/app/: index.html
docs/audit/: changes_vs_workbook.md  column_field_map.md  do_not_publish.md  inconsistencies_found.md  methodological_decisions.md
docs/stylesheets/: extra.css
outputs/: sample_results.csv  sample_results.xlsx  validation_summary.md  workbook_regression_report.md
scripts/: build_outputs.py  generate_equivalence_fixture.py  generate_sample_data.py  validate_workbook.py
src/urban_tree_geometry/: __init__.py  calculations.py  cli.py  crown.py  dialux_export.py  io.py  models.py  parameters.py  pipeline.py  reporting.py  validation.py
tests/: conftest.py  test_crown.py  test_dap.py  test_dialux_export.py  test_equivalence_fixture.py  test_height.py  test_palms.py  test_regression_workbook.py  test_shared_json.py  test_units.py  test_validation.py
tests/fixtures/: equivalence_cases.json  workbook_reference.csv
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/scripts/: sync-params.mjs
web/src/: batch.ts  config.ts  main.ts  style.css
web/test/: calculations.test.ts  dialux3ds.test.ts  equivalence.test.ts  params.test.ts  zipstore.test.ts
(+11 files in other folders)
